--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -11,3 +11,27 @@
     text-decoration: line-through;
   }
 }
+.devContainer {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  span {
+    color: white;
+    a {
+      color: white;
+    }
+  }
+  z-index: 1;
+  opacity: 0.7;
+}
+a {
+  text-decoration: none;
+}
+
+$breakpoint-tablet: 998px;
+@media (max-width: $breakpoint-tablet) {
+  .devContainer {
+    font-size: small;
+    opacity: 0.5;
+  }
+}
